--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="grid-container">
+		<div id="1" >1</div>
+		<div id="2" >2</div>
+		<div id="3" >3</div>
+		<div id="4" >4</div>
+		<div id="5" >5</div>
+		<div id="6" >6</div>
+		<div id="7" >7</div>
+		<div id="8" >8</div>
+		<div id="9" >9</div>
+		
+	</div>
+	<form class="wholeform">
+	<input type="text" id="block-id">
+	<input type="text" id="colour-id">
+	<input type="submit" value="change color"/>
+	
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
