--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
 	<input type="text" id="block-id">
 	<input type="text" id="colour-id">
 	<input type="submit" value="change color"/>
+		<input type="reset" value="reset" id="Reset"/>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
