--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
 		
 	</div>
 	<form class="wholeform">
-	<input type="text" id="block-id">
-	<input type="text" id="colour-id">
-	<input type="submit" value="change color" id="change-button"/>
+	<input type="text" id="block_id">
+	<input type="text" id="colour_id">
+	<input type="submit" value="change color" id="change_button"/>
 		<input type="reset" value="reset" id="Reset"/>
 	</form>
     <script type="text/javascript" src="./script.js">
