--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="grid-container">
+	<div class="grid-container">
 		<div id="1" class="grid-item">1</div>
 		<div id="2" class="grid-item">2</div>
 		<div id="3" class="grid-item">3</div>
@@ -23,7 +23,7 @@
 	<form class="wholeform">
 	<input type="text" id="block_id">
 	<input type="text" id="colour_id">
-	<input type="submit" value="change color" id="change_button"/>
+	<input type="submit" value="change" id="change_button"/>
 		<input type="reset" value="reset" id="Reset"/>
 	</form>
     <script type="text/javascript" src="./script.js">
