--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
 	<form class="wholeform">
 	<input type="text" id="block_id">
 	<input type="text" id="colour_id">
-	<input type="submit" value="change" id="change_button"/>
-		<input type="reset" value="reset" id="Reset"/>
+	<input type="submit" value="Change" id="change_button"/>
+	<input type="reset" value="reset" id="reset_button"/>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
