--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 	<form class="wholeform">
 	<input type="text" id="block_id">
 	<input type="text" id="colour_id">
-	<input type="submit" value="Change" id="change_button"/>
+	<button type="submit" id="change_button">Change</button>
 	<input type="reset" value="reset" id="reset_button"/>
 	</form>
     <script type="text/javascript" src="./script.js">
