--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 	<input type="text" id="block_id">
 	<input type="text" id="colour_id">
 	<button type="submit" id="change_button">Change</button>
-	<input type="reset" value="reset" id="reset_button"/>
+	<button type="reset" id="reset_button">Reset</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
